--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244852.md#1" title="【一线采访】厦门多家医院停诊 民间恐慌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235684-GettyImages-1235242848-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245684.md#1" title="分析：北京两举动曝中共军队致命弱点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13190200-GettyImages-74020207@1200x1200-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/uimzxm315/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://uimzxm315.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247739.md#1">辉瑞：COVID-19疫苗对5至11岁儿童安全有效</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248008.md#1">恒大股价跌至11年最低 中国房地产恐慌扩大</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245487.md#1">从阿里到恒大 习近平20大前清场？（上）</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247605.md#1">母女高速公路上爆胎 陌生人酷暑中帮忙换轮胎</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247739.md#1">辉瑞：COVID-19疫苗对5至11岁儿童安全有效</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13248008.md#1">恒大股价跌至11年最低 中国房地产恐慌扩大</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247852.md#1">英议员：活摘器官是“商业化谋杀”必须终止</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246512.md#1">两创业男孩购物钱不够 陌生人帮付款解围</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247889.md#1">美国将对完全接种疫苗的外国人放宽入境限制</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247798.md#1">电影“卢旺达饭店”主角原型 恐怖主义罪成</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246512.md#1">两创业男孩购物钱不够 陌生人帮付款解围</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245708.md#1">中国华融负债超万亿 6800亿债务即将到期</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244481.md#1">【一线采访】莆田病例急攀升 民众：大型灾难事件</a><br>
@@ -29,13 +29,13 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243925.md#1">核潜艇威慑力大 攻击型和弹道导弹型有何区别</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245262.md#1">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br>
 <br><p align="center"><a href="https://github.com/uimzxm315/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245561.md#1">周晓辉：又见三大信号 孟建柱岌岌可危</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245052.md#1">反活摘器官峰会吁各国立法 惩治中共暴行</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13244347.md#1">王赫：AUKUS是重塑印太格局重要一步</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244627.md#1">【中国观察】李克强“灭火”党刊重提林彪政变</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13244218.md#1">钟原：各方插手阿富汗事务 中共难填空白</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13244249.md#1">【横河观点】世界为何对中共移植黑幕沉默？</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242254.md#1">【时事军事】日本三款导弹 对准中共海军</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243637.md#1">【十字路口】北京内乱加速 美英澳联盟四大趋势</a><br>
 <br><p align="center"><a href="https://github.com/uimzxm315/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13244937.md#1">佳节颂恩 大陆民众恭祝李洪志大师中秋快乐</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246400.md#1">香港股市大跌 恒生地产一度下挫2000点</a><br>
@@ -49,6 +49,7 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247416.md#1">花10万元维修 郑州泡水车开不到一周就自燃</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246129.md#1">田云：河南省高院副院长投案 党媒难掩真相</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13246167.md#1">宁波结婚费用超30万 大陆农村娶妻难引关注</a><br>
+<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245487.md#1">从阿里到恒大 习近平20大前清场？（上）</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247529.md#1">【新闻大家谈】专访廖天琪：六四和中共决裂</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245793.md#1">被传怀上第三胎 孙俪工作室幽默回应</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a><br>
@@ -63,6 +64,7 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13242771.md#1">【独家】文件泄河南迫害法轮功的轨迹</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243777.md#1">前世银主管调高中国排名 美共和党吁调查</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243381.md#1">中国留学生在联合国前维权 诉中共警察性侵</a><br>
+<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/18/n13243637.md#1">【十字路口】北京内乱加速 美英澳联盟四大趋势</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240636.md#1">中共何以令一位精英人士流亡美国（1）</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242431.md#1">【新闻看点】福建疫情仍高烧 中共欲打港富豪？</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242167.md#1">【财商天下】恒大如炸弹 救或不救中共陷两难</a><br>
@@ -95,15 +97,13 @@
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13237005.md#1">【有冇搞错】恒大启示 谁“共同”了谁的富裕？</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13236782.md#1">法轮功学员钟俊芳遭迫害20年 亲友举报责任人</a><br>
 <a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13237195.md#1">赵丽颖重返节目帮洗碗 黄晓明惊呼遭调侃</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13237097.md#1">【新闻看点】福建疫情仍严重 传许家印突进京</a><br>
-<a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/15/n13237127.md#1">【秦鹏直播】欧盟称中共是对手 瑞士通过友台法案</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.165.151.62/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,646</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.166.53.189/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,646</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 383,852,300 人
+!共 383,852,735 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247852.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13247949-20210718BrooklynParade-1640-1200x800-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247852.md#1">英议员：活摘器官是“商业化谋杀”必须终止</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247021.md#1">举报湖北潜江开发商等单位造假 业主遭殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245440.md#1">法轮功学员孙建中再陷冤狱 曾遭酷刑折磨</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245260.md#1">长沙十多名法轮功学员被非法关押近一年</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246137.md#1">广州警察用膝盖压司机致瘫软 视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13248008.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241787-The-Evergrande-headquarters-700x420-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13248008.md#1">恒大股价跌至11年最低 中国房地产恐慌扩大</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247017.md#1">海航重整后将“一拆为四” 老股东股权清零</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1">恒大财富公告“实物兑付” 投资者担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13231438.md#1">小型中企在美上市 圈钱与做空游戏频上演</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243308.md#1">高房价惹祸？出生率第一的深圳人不愿生育了</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243341.md#1">谢金河：中国房企骨牌效应开始 最终影响内需</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247248.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13247318-2109200521472378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247248.md#1">无惧中共施压 法国参议院访团10月初访台</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247156.md#1">谢金河：港股频破底 看来香港有大事要发生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246909.md#1">应对中共威胁 日参议员吁日台共享海上情报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246455.md#1">台将生产雄二E导弹 专家推测主攻共军飞弹阵地</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246143.md#1">中共禁台水果 吴钊燮：它这样还想进CPTPP？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1">中共再禁两种台湾水果 台拟诉诸世贸组织</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247172.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13247204-GettyImages-1195361408-800x450-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247172.md#1">江西现复阳病例 密切接触者活动轨迹公布</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247110.md#1">北京通州一小区凌晨发生火灾 5人遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243430.md#1">福建Delta疫情传4市 流出人口逾14万人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242886.md#1">惠州一轿车撞路边摊档后起火 致6死13伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241331.md#1">北京一公交车撞上行人 致1死4伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247133.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13247133.md#1">中秋节前夕 北京月饼市场冷清 厂家不打折</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246946.md#1">北京一公司没发月饼 员工殴打领导致入院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245816.md#1">三退声明精选（2021/09/19）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244420.md#1">三退声明精选（2021/09/18）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239193-ef5a28e5d03aac6f152ead0fbb9ad82b-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/7/n13217362.md#1">中共禁老师校外补课 教唆学生举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213741.md#1">双减冲击中国家庭：教育乱象 谁之过</a><br>
