--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -30,8 +30,8 @@
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240924.md#1" target="_blank">【健康食物图鉴】专家教你烤肉 吃得健康又安全</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240924.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13240926-514208-150x120.jpg" align ="left"></a>中秋佳节，许多民众已经准备好，利用“烤肉聚会”，与亲朋好友相聚、团圆，开心共度愉快的佳节时光。然而，烤肉怎么烤、怎么吃才健康？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 3:10 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240934.md#1" target="_blank">这样夯肉 防癌、防疫、保健康</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240934.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13240936-513482-150x120.jpg" align ="left"></a>中秋团圆，大家边烤肉、边聊天，不知不觉容易吃进过多的食物及热量；且烤肉时烧烤温度动辄200~300度，食材易因高温加热产生致癌物质，让温馨的过节时光引来健康危机。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 2:41 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242098.md#1" target="_blank">港医开发安心冻 造福咀嚼吞咽障碍病友</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242098.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242101-517641-150x120.jpg" align ="left"></a>为照护咀嚼吞咽障碍者饮食需求，延缓其咀嚼吞咽失，小港医院“咀嚼吞咽机能重建中心”结合多职种专业人员，提供个案整服务，盼兼顾其营养需求又安全不呛咳，以降低吸入性肺炎的发生，同步提升其生活品质。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 2:29 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242435.md#1" target="_blank">以色列：打疫苗突破感染风险 是自然感染13倍</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242435.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242982-GettyImages-1230743433-150x120.jpg" align ="left"></a>以色列作为全球疫苗接种率最高的国家之一，疫情却再度升温，本周创下感染人数新高。以色列近期的一项研究发现，打疫苗者对Delta变种的有症状突破性感染率，是曾经自然感染新冠者感染率的27倍。这两群人中，打2剂疫苗的人发生突破性感染Delta变种的风险，是自然感染者的13.06倍。“自然感染”是指曾经感染过新冠病毒，所以体内.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 12:16 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13243997.md#1" target="_blank">伊维菌素用于预防和治疗COVID-19感染的系统评价</a><br></h3>根据美国治疗学杂志（American Journal of Therapeutics）在2021年7、8月双月刊的报导（Ivermectin for Prevention and Treatment of COVID-19 Infection: A Systematic Review, Meta-analysis, a.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:24 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240921.md#1" target="_blank">肠胃闹脾气  茶饮、穴道来解救</a><br></h3>中秋节烤肉是一定要的娱兴节目，在开心的气氛下，容易暴饮暴食，也有不少民众常在大啖烤肉后，出现腹胀、腹痛等肠胃问题，或是吃完烤肉，隔天总是严重水肿，甚至身体横向发展。这次找扶原中医诊所院长郭大维来帮大家解决病痛与拯救身材。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 3:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240931.md#1" target="_blank">享受美食 中秋“肠”保健康</a><br></h3>无论是应景的烤肉或月饼，都是高油、高盐食物，容易引起消化道问题。医师分享妙招，享受美食的同时，避免肠胃拉警报。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 2:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008.htm">https://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
