--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -41,6 +41,7 @@
 全球大规模实验，口罩阻挡病毒测试！
 
 最新研究：未接种疫苗的儿童，感染后的死亡风险低于已经完全接种？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 8:13 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13220612.md#1" target="_blank">夫妻从不吵架就没有冲突？化解冲突之钥</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/9/n13220612.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13014789-shutterstock_1938419236-150x120.jpg" align ="left"></a>一对夫妻表明他们从不吵架，我说：“那你们就也不亲近了。”冲突是人性。回避冲突其实是在向蛮横霸道靠近，而不是向和平共处靠近。冲突本身不是牢笼，把人困住的是常用来应付冲突的僵化思维。铸成僵化思维之牢的铁条可能很难辨认，因为它们往往镀上了一层好意。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月15日 7:36 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242618.md#1" target="_blank">汽车维修问与答 &#8211; 音响被锁住</a><br></h3>读者Yiliang问：你好，李进老师，我的车是2003 Acura TL跑了7万多迈，由于电瓶坏了，自己买一个换了，现在音响被锁住了，密码输进去也不行，请问这种情况怎么解决？谢谢！
+李进答：Yiliang您好，如果密码是正确的，可能收音机自身出了故障，不知道有没有可能把收音机重新启动（Reset）？请参考如下的案例.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 7:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008_2.htm">https://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
